課題４ 各ページのリンクを追加しました。

--- a/dw004_data/works/web.html
+++ b/dw004_data/works/web.html
@@ -10,13 +10,13 @@
 <p>ウェブ作品の制作実績を紹介するページです。</p>
 
 <ul>
-	<li>Top</li>
-	<li>News</li>
-	<li>About</li>
-	<li>Works
+	<li><a href="../index.html">Top</a></li>
+	<li><a href="../index.html">News</a></li>
+	<li><a href="../about/index.html">About</a></li>
+	<li><a href="index.html">Works</a>
 		<ul>
-			<li>Graphics</li>
-			<li>Web</li>
+			<li><a href="graphics.html"></a>Graphics</li>
+			<li><a href="web.html"></a>Web</li>
 		</ul>
 	</li>
 </ul>
