--- a/dw004_data/index.html
+++ b/dw004_data/index.html
@@ -10,10 +10,10 @@
 <p>サイト全体のトップページです。</p>
 
 <ul>
-	<li>Top</li>
-	<li>News</li>
-	<li>About</li>
-	<li>Works</li>
+	<li><a href="index.html">Top</a></li>
+	<li><a href="/news/index.html">News</a></li>
+	<li><a href="/about/index.html">About</a></li>
+	<li><a href="/work/index.html">Works</a></li>
 </ul>
 
 </body>
