--- a/dw004_data/works/index.html
+++ b/dw004_data/works/index.html
@@ -15,8 +15,8 @@
 	<li><a href="../about/index.html">About</a></li>
 	<li><a href="index.html">Works</a>
 		<ul>
-			<li><a href="graphics.html"></a>Graphics</li>
-			<li><a href="web.html"></a>Web</li>
+			<li><a href="graphics.html">Graphics</a></li>
+			<li><a href="web.html">Web</a></li>
 		</ul>
 	</li>
 </ul>
