--- a/dw004_data/works/web.html
+++ b/dw004_data/works/web.html
@@ -11,12 +11,12 @@
 
 <ul>
 	<li><a href="../index.html">Top</a></li>
-	<li><a href="../index.html">News</a></li>
+	<li><a href="../news/index.html">News</a></li>
 	<li><a href="../about/index.html">About</a></li>
 	<li><a href="index.html">Works</a>
 		<ul>
-			<li><a href="graphics.html"></a>Graphics</li>
-			<li><a href="web.html"></a>Web</li>
+			<li><a href="graphics.html">Graphics</a></li>
+			<li><a href="web.html">Web</a></li>
 		</ul>
 	</li>
 </ul>
